Changelog
=========

1.6 - Unreleased
----------------


1.5 - 2009-11-18
----------------

* Fixed test failure in usage.txt.
  [hannosch]

* Standardized package metadata layout.
  [hannosch]

1.4 - 2009-11-05
----------------

* Fix schema copying to also include properties and layers.
  [maerteijn]

1.3 - 2009-10-20
----------------

* Refactored the TranslatableExtensionField getMutator to directly reuse the
  generatedMutatorWrapper from LinguaPlone itself. This avoids duplicating the
  logic and lets schemaextender fields use the special reference field
  handling introduced in LinguaPlone. This change introduces a version
  requirement for LinguaPlone of at least 3.0b6.
  [hannosch]

1.2 - 2009-10-10
----------------

* Add `ISchema` adapter using simple caching on the request in order to
  avoid redundant calculation of the (extended) schema.  The adapter is
  not enabled by default and can be activated by loading `caching.zcml`.
  [witsch]

* Avoid using the overridden `+` operator when copying the original schema
  as this will needlessly validate all fields again.
  [witsch]

* Added missing changelog entry.
  [hannosch, woutervh]

1.1 - 2009-06-03
----------------

* Added support for LinguaPlone language independent fields, by seamlessly
  using a new TranslatableExtensionField when LP is installed.
  [hannosch]

* Added a proper interface to the IExtensionField.
  [hannosch]

* Adjusted tests for Plone 3.3.
  [hannosch]

* Minor adjustment in documentation: a) don't adapt the class in the example,
  b) explain why named adapters are used.
  [jensens]

* Schema modifiers now also browserlayer-aware.
  [jessesnyder]

1.0 - 2008-07-17
----------------

* No changes since 1.0rc1.

1.0rc1 - 2008-04-07
-------------------

* Added optional plone.browserlayer support. Extenders implementing
  IBrowserLayerAwareExtender need to have a layer attribute. Those extenders
  are taken into account only if the specified layer is active.
  [jensens]
